# iam-lib

./: .gitignore  README.md  pixi.toml  pyproject.toml  pyrightconfig.json  requirements.txt
src/iam-lib/: exceptions.py  requests_wrapper.py
src/iam_lib/: changelog.md  client.py  clients.py  config.py.template  exceptions.py  requests_wrapper.py  response.py  rest_api.py  token.py
src/iam_lib/api/: __init__.py  access.py  api_key.py  authorized.py  client.py  edi_token.py  eml.py  group.py  profile.py  resource.py  rule.py
src/iam_lib/models/: __init__.py  permission.py  response_model.py
tests/: __init__.py  config.py.template  conftest.py  fixtures.py  test_access_api.py  test_add_access.py  test_add_eml.py  test_api.py  test_authorized_api.py  test_client.py  test_edi_token_api.py  test_eml_api.py  test_for_real.py  test_get_acl.py  test_is_authorized.py  test_profile_api.py  test_requests_wrapper.py  test_resource.py  test_resource_api.py  test_rest_api.py  test_rule.py  test_rule_api.py  utilities.py
tests/data/: resource_tree.json
