[project]
authors = [
  {name = "Mark Servilla", email = "mark.servilla@gmail.com"}
]
dependencies = [
  "daiquiri>=3.0.0,<4",
  "requests>=2.32.3,<3",
  "pyjwt>=2.10.1,<3",
  "cryptography>=44.0.3,<45"
]
name = "iam-lib"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<3.14"
dynamic = ["version"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/iam_lib/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
