[project]
authors = [
  {name = "Mark Servilla", email = "mark.servilla@gmail.com"}
]
dependencies = [
  "daiquiri>=3.0.0,<4",
  "requests>=2.32.3,<3",
  "pyjwt>=2.10.1,<3",
  "cryptography >=46.0.5,<47"
]
name = "iam-lib"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<3.14"
dynamic = ["version"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/iam_lib/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--capture=no --verbose"
pythonpath = ["src"]
