[project]
name = "iam-lib"
authors = [
  {name = "Mark Servilla", email = "mark.servilla@gmail.com"}
]
description = "Add a short description here"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<3.14"
dynamic = ["version"]
dependencies = []


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/iam_lib/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--capture=no --verbose"
pythonpath = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "win-64", "osx-64", "osx-arm64"]

[tool.pixi.tasks]
test = "pytest"
lint = "ruff check ."

[tool.pixi.dependencies]
daiquiri = ">=3.0.0,<4"
requests = ">=2.32.3,<3"
pyjwt = ">=2.10.1,<3"
cryptography = ">=46.0.5,<47"
python = "3.12.*"
pixi-pycharm = ">=0.0.8,<0.0.9"

[tool.pixi.pypi-dependencies]
iam-lib = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.5,<9"
pytest-mock = ">=3.14.0,<4"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.11.8,<0.12"

[tool.pixi.environments]
default = { features = ["test", "lint"], solve-group = "default" }
